pkg/e2e/fixtures/bridge/expected-kubernetes/base/public-network-network-policy.yaml
#! public-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: public-network-network-policy
    namespace: bridge
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.public-network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.public-network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.public-network: "true"
